<resources>
    <string name="app_name">pmuChatProject</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="enter_correct_email">Enter Valid Email Address</string>
    <string name="password_missmatch">Password Missmatch</string>
    <string name="user_created">User created successfully</string>
    <string name="signup_failed">Sign Up Failed : %1$s</string>
    <string name="donthave_account">Don`t have account : </string>
    <string name="failed_to_update_profile">Failed to update : %1$s</string>
    <string name="permission_request">Access permission is required</string>
    <string name="Save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo is removed successfully</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will apear here</string>
    <string name="empty_friends_list">Friends list will apear here</string>
    <string name="empty_requests_list">Friends Requests will apear here</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="request_sent_failed">Failed to sent a request : %1$s</string>
    <string name="request_cancel_successfully">Cancel Request Successful</string>
    <string name="request_cancel_failed">Failed to cancel the request : %1$s</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="failed_fetch_friend_request">Failed to fetch friend request : %1$s</string>
    <string name="failed_decline_request">Failed to Decline request : %1$s</string>
    <string name="failed_accepted_request">Failed to accepted request : %1$s</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="failed_to_send_message">Failed to send message : %1$s</string>
    <string name="message_send_successful">Message sent successfully</string>
    <string name="no_internet">No internet</string>
    <string name="enter_message">Enter Message</string>
    <string name="take_picture">Take Picture</string>
</resources>
